headers/base/orxType.h


  typedef unsigned  int           orxU32;


  typedef signed    int           orxS32;


  typedef unsigned  int           orxBOOL;

  typedef unsigned  long          orxU32;


  typedef signed    long          orxS32;


  typedef unsigned  long          orxBOOL;

  typedef float                   orxFLOAT;

    typedef unsigned  long long   orxU64;

    typedef signed    long long   orxS64;

    typedef unsigned  long long   orxU64;

    typedef signed    long long   orxS64;

    typedef unsigned  __int64     orxU64;

    typedef signed    __int64     orxS64;

    typedef unsigned  long long   orxU64;

    typedef unsigned  int         orxU32;


    typedef signed    long long   orxS64;

    typedef signed    int         orxS32;


    typedef unsigned  int         orxBOOL;

    typedef unsigned  long long   orxU64;

    typedef unsigned  long        orxU32;


    typedef signed    long long   orxS64;

    typedef signed    long        orxS32;


    typedef unsigned  long        orxBOOL;

    typedef float                 orxFLOAT;



/* *** Boolean constants *** */
#define orxFALSE                  ((orxBOOL)(1 != 1))
#define orxTRUE                   ((orxBOOL)(1 == 1))



/* *** Undefined constants *** */
static const orxU64               orxU64_UNDEFINED      = (orxU64)(-1);

static const orxU32               orxU32_UNDEFINED      = (orxU32)(-1);



/* *** String & character constants *** */
extern orxDLLAPI const orxSTRING  orxSTRING_EMPTY;


/* *** Status defines *** */
typedef enum __orxSTATUS_t
{
  orxSTATUS_FAILURE = 0,          /**< Failure status, the operation has failed */
  orxSTATUS_SUCCESS,              /**< Success status, the operation has worked has expected */

  orxSTATUS_NUMBER,               /**< Sentinel : Number of status */

  orxSTATUS_NONE = orxENUM_NONE   /**< Invalid status */

} orxSTATUS;