src/norx/config.nim


proc orxConfig_ClearSection*(zSectionName: cstring): orxSTATUS {.cdecl,
    importc: "orxConfig_ClearSection", dynlib: libORX.}
## * Clears a value from current selected section
##  @param[in] _zKey             Key name
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_ClearValue*(zKey: cstring): orxSTATUS {.cdecl,
    importc: "orxConfig_ClearValue", dynlib: libORX.}
## * Is this value locally inherited from another one (ie. with a Value = @... syntax)?
##  @param[in] _zKey             Key name
##  @return orxTRUE / orxFALSE
##

proc orxConfig_IsLocallyInheritedValue*(zKey: cstring): orxBOOL {.cdecl,
    importc: "orxConfig_IsLocallyInheritedValue", dynlib: libORX.}
## * Is this value inherited from another one (either locally or at section level)?
##  @param[in] _zKey             Key name
##  @return orxTRUE / orxFALSE
##

proc orxConfig_IsInheritedValue*(zKey: cstring): orxBOOL {.cdecl,
    importc: "orxConfig_IsInheritedValue", dynlib: libORX.}
## * Is this value random? (ie. using '~' character, within or without a list)
##  @param[in] _zKey             Key name
##  @return orxTRUE / orxFALSE
##

proc orxConfig_IsRandomValue*(zKey: cstring): orxBOOL {.cdecl,
    importc: "orxConfig_IsRandomValue", dynlib: libORX.}
## * Is this value dynamic? (ie. random and/or a list or command)
##  @param[in] _zKey             Key name
##  @return orxTRUE / orxFALSE
##

proc orxConfig_IsDynamicValue*(zKey: cstring): orxBOOL {.cdecl,
    importc: "orxConfig_IsDynamicValue", dynlib: libORX.}
## * Is this a command value? (ie. lazily evaluated command: %...)
##  @param[in] _zKey             Key name
##  @return orxTRUE / orxFALSE
##

proc orxConfig_IsCommandValue*(zKey: cstring): orxBOOL {.cdecl,
    importc: "orxConfig_IsCommandValue", dynlib: libORX.}
## * Has specified value for the given key?
##  @param[in] _zKey             Key name
##  @return orxTRUE / orxFALSE
##

proc orxConfig_HasValue*(zKey: cstring): orxBOOL {.cdecl,
    importc: "orxConfig_HasValue", dynlib: libORX.}
## * Gets a value's source section (ie. the section where the value is explicitly defined), only considering section inheritance, not local one
##  @param[in] _zKey             Key name
##  @return Name of the section that explicitly contains the value, orxSTRING_EMPTY if not found
##

proc orxConfig_GetValueSource*(zKey: cstring): cstring {.cdecl,
    importc: "orxConfig_GetValueSource", dynlib: libORX.}
## * Reads a signed integer value from config (will take a random value if a list is provided for this key)
##  @param[in] _zKey             Key name
##  @return The value
##

proc orxConfig_GetS32*(zKey: cstring): orxS32 {.cdecl,
    importc: "orxConfig_GetS32", dynlib: libORX.}
## * Reads an unsigned integer value from config (will take a random value if a list is provided for this key)
##  @param[in] _zKey             Key name
##  @return The value
##

proc orxConfig_GetU32*(zKey: cstring): orxU32 {.cdecl,
    importc: "orxConfig_GetU32", dynlib: libORX.}
## * Reads a signed integer value from config (will take a random value if a list is provided for this key)
##  @param[in] _zKey             Key name
##  @return The value
##

proc orxConfig_GetS64*(zKey: cstring): orxS64 {.cdecl,
    importc: "orxConfig_GetS64", dynlib: libORX.}
## * Reads an unsigned integer value from config (will take a random value if a list is provided for this key)
##  @param[in] _zKey             Key name
##  @return The value
##

proc orxConfig_GetU64*(zKey: cstring): orxU64 {.cdecl,
    importc: "orxConfig_GetU64", dynlib: libORX.}
## * Reads a float value from config (will take a random value if a list is provided for this key)
##  @param[in] _zKey             Key name
##  @return The value
##

proc orxConfig_GetFloat*(zKey: cstring): orxFLOAT {.cdecl,
    importc: "orxConfig_GetFloat", dynlib: libORX.}
## * Reads a string value from config (will take a random value if a list is provided for this key)
##  @param[in] _zKey             Key name
##  @return The value
##

proc orxConfig_GetString*(zKey: cstring): cstring {.cdecl,
    importc: "orxConfig_GetString", dynlib: libORX.}
## * Reads a boolean value from config (will take a random value if a list is provided for this key)
##  @param[in] _zKey             Key name
##  @return The value
##

proc orxConfig_GetBool*(zKey: cstring): orxBOOL {.cdecl,
    importc: "orxConfig_GetBool", dynlib: libORX.}
## * Reads a vector value from config (will take a random value if a list is provided for this key)
##  @param[in]   _zKey             Key name
##  @param[out]  _pvVector         Storage for vector value
##  @return The value
##

proc orxConfig_GetVector*(zKey: cstring; pvVector: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxConfig_GetVector", dynlib: libORX.}
## * Duplicates a raw value (string) from config
##  @param[in] _zKey             Key name
##  @return The value. If non-null, needs to be deleted by the caller with orxString_Delete()
##

proc orxConfig_DuplicateRawValue*(zKey: cstring): cstring {.cdecl,
    importc: "orxConfig_DuplicateRawValue", dynlib: libORX.}
## * Writes a signed integer value to config
##  @param[in] _zKey             Key name
##  @param[in] _s32Value         Value
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_SetS32*(zKey: cstring; s32Value: orxS32): orxSTATUS {.cdecl,
    importc: "orxConfig_SetS32", dynlib: libORX.}
## * Writes an unsigned integer value to config
##  @param[in] _zKey             Key name
##  @param[in] _u32Value         Value
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_SetU32*(zKey: cstring; u32Value: orxU32): orxSTATUS {.cdecl,
    importc: "orxConfig_SetU32", dynlib: libORX.}
## * Writes a signed integer value to config
##  @param[in] _zKey             Key name
##  @param[in] _s64Value         Value
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_SetS64*(zKey: cstring; s64Value: orxS64): orxSTATUS {.cdecl,
    importc: "orxConfig_SetS64", dynlib: libORX.}
## * Writes an unsigned integer value to config
##  @param[in] _zKey             Key name
##  @param[in] _u64Value         Value
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_SetU64*(zKey: cstring; u64Value: orxU64): orxSTATUS {.cdecl,
    importc: "orxConfig_SetU64", dynlib: libORX.}
## * Writes a float value to config
##  @param[in] _zKey             Key name
##  @param[in] _fValue           Value
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_SetFloat*(zKey: cstring; fValue: orxFLOAT): orxSTATUS {.cdecl,
    importc: "orxConfig_SetFloat", dynlib: libORX.}
## * Writes a string value to config
##  @param[in] _zKey             Key name
##  @param[in] _zValue           Value
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_SetString*(zKey: cstring; zValue: cstring): orxSTATUS {.cdecl,
    importc: "orxConfig_SetString", dynlib: libORX.}
## * Writes a string value to config, in block mode
##  @param[in] _zKey             Key name
##  @param[in] _zValue           Value to write in block mode
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_SetStringBlock*(zKey: cstring; zValue: cstring): orxSTATUS {.
    cdecl, importc: "orxConfig_SetStringBlock", dynlib: libORX.}
## * Writes a boolean value to config
##  @param[in] _zKey             Key name
##  @param[in] _bValue           Value
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_SetBool*(zKey: cstring; bValue: orxBOOL): orxSTATUS {.cdecl,
    importc: "orxConfig_SetBool", dynlib: libORX.}
## * Writes a vector value to config
##  @param[in] _zKey             Key name
##  @param[in] _pvValue          Value
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_SetVector*(zKey: cstring; pvValue: ptr orxVECTOR): orxSTATUS {.cdecl,
    importc: "orxConfig_SetVector", dynlib: libORX.}
## * Is value a list for the given key?
##  @param[in] _zKey             Key name
##  @return orxTRUE / orxFALSE
##

proc orxConfig_IsList*(zKey: cstring): orxBOOL {.cdecl,
    importc: "orxConfig_IsList", dynlib: libORX.}
## * Gets list count for a given key
##  @param[in] _zKey             Key name
##  @return List count if it's a valid list, 0 otherwise
##

proc orxConfig_GetListCount*(zKey: cstring): orxS32 {.cdecl,
    importc: "orxConfig_GetListCount", dynlib: libORX.}
## * Reads a signed integer value from config list
##  @param[in] _zKey             Key name
##  @param[in] _s32ListIndex     Index of desired item in list / -1 for random
##  @return The value
##

proc orxConfig_GetListS32*(zKey: cstring; s32ListIndex: orxS32): orxS32 {.cdecl,
    importc: "orxConfig_GetListS32", dynlib: libORX.}
## * Reads an unsigned integer value from config list
##  @param[in] _zKey             Key name
##  @param[in] _s32ListIndex     Index of desired item in list / -1 for random
##  @return The value
##

proc orxConfig_GetListU32*(zKey: cstring; s32ListIndex: orxS32): orxU32 {.cdecl,
    importc: "orxConfig_GetListU32", dynlib: libORX.}
## * Reads a signed integer value from config list
##  @param[in] _zKey             Key name
##  @param[in] _s32ListIndex     Index of desired item in list / -1 for random
##  @return The value
##

proc orxConfig_GetListS64*(zKey: cstring; s32ListIndex: orxS32): orxS64 {.cdecl,
    importc: "orxConfig_GetListS64", dynlib: libORX.}
## * Reads an unsigned integer value from config list
##  @param[in] _zKey             Key name
##  @param[in] _s32ListIndex     Index of desired item in list / -1 for random
##  @return The value
##

proc orxConfig_GetListU64*(zKey: cstring; s32ListIndex: orxS32): orxU64 {.cdecl,
    importc: "orxConfig_GetListU64", dynlib: libORX.}
## * Reads a float value from config list
##  @param[in] _zKey             Key name
##  @param[in] _s32ListIndex     Index of desired item in list / -1 for random
##  @return The value
##

proc orxConfig_GetListFloat*(zKey: cstring; s32ListIndex: orxS32): orxFLOAT {.
    cdecl, importc: "orxConfig_GetListFloat", dynlib: libORX.}
## * Reads a string value from config list
##  @param[in] _zKey             Key name
##  @param[in] _s32ListIndex     Index of desired item in list / -1 for random
##  @return The value
##

proc orxConfig_GetListString*(zKey: cstring; s32ListIndex: orxS32): cstring {.
    cdecl, importc: "orxConfig_GetListString", dynlib: libORX.}
## * Reads a boolean value from config list
##  @param[in] _zKey             Key name
##  @param[in] _s32ListIndex     Index of desired item in list / -1 for random
##  @return The value
##

proc orxConfig_GetListBool*(zKey: cstring; s32ListIndex: orxS32): orxBOOL {.cdecl,
    importc: "orxConfig_GetListBool", dynlib: libORX.}
## * Reads a vector value from config list
##  @param[in]   _zKey             Key name
##  @param[in]   _s32ListIndex     Index of desired item in list / -1 for random
##  @param[out]  _pvVector         Storage for vector value
##  @return The value
##

proc orxConfig_GetListVector*(zKey: cstring; s32ListIndex: orxS32;
                             pvVector: ptr orxVECTOR): ptr orxVECTOR {.cdecl,
    importc: "orxConfig_GetListVector", dynlib: libORX.}
## * Writes a list of string values to config
##  @param[in] _zKey             Key name
##  @param[in] _azValue          Values
##  @param[in] _u32Number        Number of values
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxConfig_SetListString*(zKey: cstring; azValue: cstringArray;
                             u32Number: orxU32): orxSTATUS {.cdecl,
    importc: "orxConfig_SetListString", dynlib: libORX.}
## * Appends string values to a config list (will create a new entry if not already present)
##  @param[in] _zKey             Key name
##  @param[in] _azValue          Values
##  @param[in] _u32Number        Number of values
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##
